--- a/opdr2.html
+++ b/opdr2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>foto's</title>
+    <title>foto's van haar</title>
 </head>
 <body>
 <img src="pictures/vuurtoren300.jpg">
