--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>home page</title>
 </head>
 <body>
+<img src="pictures/scissor-magic-logo200.jpg">
 
 </body>
 </html>
