--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>home page</title>
+    <title>home pagina</title>
 </head>
 <body>
-<img src="pictures/scissor-magic-logo200.jpg">
+    <img src="pictures/scissor-magic-logo200.jpg">
+<br>
+<a href="producten.html"> <h3>Producten</h3> </a>
+<a href="salons.html"> <h3>Salon</h3> </a>
+<a href="openingstijden.html"> <h3>Openingstijden</h3> </a>
 
 </body>
 </html>
