--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <img src="pictures/scissor-magic-logo200.jpg">
 <br>
 <a href="producten.html"> <h3>Producten</h3> </a>
-<a href="salons.html"> <h3>Salon</h3> </a>
+<a href="salons.html"> <h3>Salons</h3> </a>
 <a href="openingstijden.html"> <h3>Openingstijden</h3> </a>
 
 </body>
