--- a/openingstijden.html
+++ b/openingstijden.html
@@ -9,7 +9,7 @@
 <br>
     <a href="index.html"> <h3>Home pagina</h3></a>
     <a href="producten.html"> <h3>Producten</h3> </a>
-    <a href="salons.html"> <h3>Salon</h3> </a>
+    <a href="salons.html"> <h3>Salons</h3> </a>
 
 
 
