--- a/producten.html
+++ b/producten.html
@@ -8,7 +8,7 @@
     <img src="pictures/scissor-magic-logo200.jpg">
 <br>
     <a href="index.html"> <h3>Home pagina</h3> </a>
-    <a href="salons.html"> <h3>Salon</h3> </a>
+    <a href="salons.html"> <h3>Salons</h3> </a>
     <a href="openingstijden.html"> <h3>Openingstijden</h3> </a>
 
 
