--- a/salons.html
+++ b/salons.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>salons</title>
+    <title>salon</title>
 </head>
 <body>
     <img src="pictures/scissor-magic-logo200.jpg">
