--- a/openingstijden.html
+++ b/openingstijden.html
@@ -7,9 +7,17 @@
 <body>
     <img src="pictures/scissor-magic-logo200.jpg">
 <br>
-    <a href="index.html"> <h3>Home pagina</h3></a>
-    <a href="producten.html"> <h3>Producten</h3> </a>
-    <a href="salons.html"> <h3>Salons</h3> </a>
+    <ol>
+        <li>
+            <a href="index.html"> Home pagina </a>
+        </li>
+        <li>
+            <a href="Producten.html"> Producten </a>
+        </li>
+        <li>
+            <a href="Salons.html"> Salons </a>
+        </li>
+    </ol>
 
 
 
