--- a/salons.html
+++ b/salons.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>salon</title>
+    <title>salons</title>
 </head>
 <body>
     <img src="pictures/scissor-magic-logo200.jpg">
 <br>
-    <a href="index.html"> <h3>Home pagina</h3> </a>
-    <a href="producten.html"> <h3>Producten</h3> </a>
-    <a href="openingstijden.html"> <h3>Openingstijden</h3> </a>
+    <ol>
+        <li>
+            <a href="index.html"> Home pagina </a>
+        </li>
+        <li>
+            <a href="Producten.html"> Producten </a>
+        </li>
+        <li>
+            <a href="openingstijden.html"> Openingstijden </a>
+        </li>
+    </ol>
 
 
 
