--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 <body>
     <img src="pictures/scissor-magic-logo200.jpg">
 <br>
-<a href="producten.html"> <h3>Producten</h3> </a>
-<a href="salons.html"> <h3>Salons</h3> </a>
-<a href="openingstijden.html"> <h3>Openingstijden</h3> </a>
+    <ol>
+        <li>
+            <a href="Producten.html"> Producten </a>
+        </li>
+        <li>
+            <a href="salons.html"> Salons </a>
+        </li>
+        <li>
+            <a href="openingstijden.html"> Openingstijden </a>
+        </li>
+    </ol>
 
 </body>
 </html>
