--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <br>
     <ol>
         <li>
-            <a href="Producten.html"> Producten </a>
+            <a href="producten.html"> Producten </a>
         </li>
         <li>
             <a href="salons.html"> Salons </a>
