--- a/openingstijden.html
+++ b/openingstijden.html
@@ -12,7 +12,7 @@
             <a href="index.html"> Home pagina </a>
         </li>
         <li>
-            <a href="Producten.html"> Producten </a>
+            <a href="producten.html"> Producten </a>
         </li>
         <li>
             <a href="Salons.html"> Salons </a>
