--- a/openingstijden.html
+++ b/openingstijden.html
@@ -15,7 +15,7 @@
             <a href="producten.html"> Producten </a>
         </li>
         <li>
-            <a href="Salons.html"> Salons </a>
+            <a href="salons.html"> Salons </a>
         </li>
     </ol>
 
