--- a/producten.html
+++ b/producten.html
@@ -12,6 +12,9 @@
             <a href="index.html"> Home pagina </a>
         </li>
         <li>
+            <a href="producten.html"> Producten </a>
+        </li>
+        <li>
             <a href="salons.html"> Salons </a>
         </li>
         <li>
