--- a/openingstijden.html
+++ b/openingstijden.html
@@ -17,6 +17,9 @@
         <li>
             <a href="salons.html"> Salons </a>
         </li>
+        <li>
+            <a href="openingstijden.html"> Openingstijden</a>
+        </li>
     </ol>
 
 
