--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <br>
     <ol>
         <li>
+            <a href="index.html"> Home pagina </a>
+        </li>
+        <li>
             <a href="producten.html"> Producten </a>
         </li>
         <li>
