--- a/salons.html
+++ b/salons.html
@@ -15,6 +15,9 @@
             <a href="producten.html"> Producten </a>
         </li>
         <li>
+            <a href="salons.html"> Salons </a>
+        </li>
+        <li>
             <a href="openingstijden.html"> Openingstijden </a>
         </li>
     </ol>
