--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
             <a href="openingstijden.html"> Openingstijden </a>
         </li>
     </ol>
+<br><br>
+<table border="1">
+    <tr>
+        <td colspan="11">Prijzen</td>
+    </tr>
+    <tr>
+        <td colspan="3">Profesioneel advies</td>
+        <td colspan="4">Wasse, knippen en drogen</td>
+        <td colspan="2">Modelföhnen</td>
+        <td colspan="2">Kleurspoeling</td>
+    </tr>
+    <tr>
+        <td colspan="3">15,00</td>
+        <td colspan="4">12,50</td>
+        <td colspan="2">32,75</td>
+        <td colspan="2">12,50</td>
+    </tr>
+    <tr>
+        <td colspan="6">Highlights <br> Max. 10 Highlights </td>
+        <td colspan="3">Permanente kleuring</td>
+        <td colspan="3">Balayage</td>
+    </tr>
+    <tr>
+        <td colspan="6">15,00</td>
+        <td colspan="3">12,50</td>
+        <td colspan="3">32,75</td>
+    </tr>
+</table>
 
 </body>
 </html>
