--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <td colspan="3">32,75</td>
     </tr>
 </table>
+<br><br><br><br><br>
+<img src="pictures/rainbow300.jpg"> <img src="pictures/zwerver300.jpg"><img src="pictures/einstein300.jpg">
 
 </body>
 </html>
