--- a/opdr2.html
+++ b/opdr2.html
@@ -5,6 +5,8 @@
     <title></title>
 </head>
 <body>
+<a href="salons.html"><img src="pictures/vuurtoren300.jpg"></a>
+<br>
 <img src="pictures/vuurtoren300.jpg">
 <img src="pictures/vuurtoren900.jpg">
 <img src="pictures/zwerver300.jpg">
@@ -29,6 +31,7 @@
 <img src="pictures/einstein900.jpg">
 <img src="pictures/mohawk300.jpg">
 <img src="pictures/mohawk900.jpg">
+
 
 
 </body>
