--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <br><br>
 <table border="1">
     <tr>
-        <td colspan="11">Prijzen</td>
+        <th colspan="11">Prijzen</th>
     </tr>
     <tr>
         <td colspan="3">Profesioneel advies</td>
@@ -51,6 +51,7 @@
 </table>
 <br><br><br><br><br>
 <img src="pictures/rainbow300.jpg"> <img src="pictures/zwerver300.jpg"> <img src="pictures/einstein300.jpg">
-
+<br>
+<a href="pictures.html"> Random mensen</a>
 </body>
 </html>
